--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     implementation rootProject.ext.dependencies["adapter-rxjava"]
     implementation 'com.facebook.fresco:fresco:0.12.0'
     implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
 }
