--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -94,7 +94,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.LoginActivity" />
-        <activity android:name=".activity.ItActivity"></activity>
+        <activity android:name=".ui.login.ItActivity" />
+        <activity android:name=".ui.regin.ReginActivity"></activity>
     </application>
 
 </manifest>
