--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -86,7 +86,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.MainActivity">
+        <activity android:name=".ui.MainActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -95,7 +97,8 @@
         </activity>
         <activity android:name=".activity.LoginActivity" />
         <activity android:name=".ui.login.ItActivity" />
-        <activity android:name=".ui.regin.ReginActivity"></activity>
+        <activity android:name=".ui.regin.ReginActivity" />
+        <activity android:name=".ui.follow.FollowActivity"></activity>
     </application>
 
 </manifest>
