--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -86,19 +86,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.MainActivity"
+        <activity
+            android:name=".ui.MainActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"></activity>
+        <activity android:name=".activity.LoginActivity" />
+        <activity android:name=".ui.login.ItActivity" />
+        <activity android:name=".ui.regin.ReginActivity" />
+        <activity android:name=".ui.follow.FollowActivity" />
+        <activity android:name=".activity.WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.LoginActivity" />
-        <activity android:name=".ui.login.ItActivity" />
-        <activity android:name=".ui.regin.ReginActivity" />
-        <activity android:name=".ui.follow.FollowActivity"></activity>
+        <activity android:name=".activity.ChuangzuoActivity"></activity>
     </application>
 
 </manifest>
