--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -89,7 +89,7 @@
         <activity
             android:name=".ui.MainActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity android:name=".activity.LoginActivity" />
         <activity android:name=".ui.login.ItActivity" />
         <activity android:name=".ui.regin.ReginActivity" />
@@ -101,7 +101,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.ChuangzuoActivity"></activity>
+        <activity android:name=".activity.ChuangzuoActivity" />
+        <activity android:name=".activity.WriteActivity" />
+        <activity android:name=".activity.MyShouCangActivity" />
+        <activity android:name=".activity.MySouActivity" />
+        <activity android:name=".activity.MyTongZhiActivity"></activity>
     </application>
 
 </manifest>
