--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -103,7 +103,7 @@
         </activity>
         <activity android:name=".activity.ChuangzuoActivity" />
         <activity android:name=".activity.WriteActivity" />
-        <activity android:name=".activity.MyShouCangActivity" />
+        <activity android:name=".ui.collect.MyShouCangActivity" />
         <activity android:name=".activity.MySouActivity" />
         <activity android:name=".activity.MyTongZhiActivity"></activity>
 
