--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -105,12 +105,11 @@
         <activity android:name=".activity.WriteActivity" />
         <activity android:name=".ui.collect.MyShouCangActivity" />
         <activity android:name=".activity.MySouActivity" />
-        <activity android:name=".activity.MyTongZhiActivity"></activity>
-
+        <activity android:name=".activity.MyTongZhiActivity" />
         <activity
             android:name="com.tencent.tauth.AuthActivity"
             android:launchMode="singleTask"
-            android:noHistory="true" >
+            android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -122,9 +121,9 @@
         </activity>
         <activity
             android:name="com.tencent.connect.common.AssistActivity"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"
-            android:configChanges="orientation|keyboardHidden|screenSize"/>
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+        <activity android:name=".ui.xiangqing.XiangQingActivity"></activity>
     </application>
-
 
 </manifest>
