--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -123,7 +123,8 @@
             android:name="com.tencent.connect.common.AssistActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
-        <activity android:name=".ui.xiangqing.XiangQingActivity"></activity>
+        <activity android:name=".ui.xiangqing.XiangQingActivity" />
+        <activity android:name=".activity.RMGZActivity"></activity>
     </application>
 
 </manifest>
