--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -124,7 +124,8 @@
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
         <activity android:name=".ui.xiangqing.XiangQingActivity" />
-        <activity android:name=".activity.RMGZActivity"></activity>
+        <activity android:name=".activity.RMGZActivity" />
+        <activity android:name=".ui.gerenxq.SPXQActivity"></activity>
     </application>
 
 </manifest>
