--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -125,7 +125,8 @@
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
         <activity android:name=".ui.xiangqing.XiangQingActivity" />
         <activity android:name=".activity.RMGZActivity" />
-        <activity android:name=".ui.gerenxq.SPXQActivity"></activity>
+        <activity android:name=".ui.gerenxq.SPXQActivity" />
+        <activity android:name=".activity.SheZhiActivity"></activity>
     </application>
 
 </manifest>
