--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -105,7 +105,7 @@
         <activity android:name=".activity.ChuangzuoActivity" />
         <activity android:name=".activity.WriteActivity" />
         <activity android:name=".ui.collect.MyShouCangActivity" />
-        <activity android:name=".activity.MySouActivity" />
+        <activity android:name=".ui.select.MySouActivity" />
         <activity android:name=".activity.MyTongZhiActivity" />
         <activity
             android:name="com.tencent.tauth.AuthActivity"
